--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/HorselessName/spotify-widget#readme",
   "dependencies": {
     "axios": "^1.6.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.1"
